<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/activity_view_task_detail_Menu_actionbar_Item_add"
        android:title="@string/activity_view_task_detail_Menu_actionbar_Item_add_String_title"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add" />
    
    <item
        android:id="@+id/activity_view_task_detail_Menu_actionbar_Item_edit"
        android:title="@string/activity_view_task_detail_Menu_actionbar_Item_edit_String_title"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit" />
    
    <item
        android:id="@+id/activity_view_task_detail_Menu_actionbar_Item_delete"
        android:title="@string/activity_view_task_detail_Menu_actionbar_Item_delete_String_title"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete" />
</menu>