<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/activity_view_all_tasks_Menu_actionbar_Item_add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/activity_view_all_tasks_Menu_actionbar_Item_add_String_title"/>
    <item
        android:id="@+id/activity_view_all_tasks_Menu_actionbar_Item_manage_task"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/activity_view_all_tasks_Menu_actionbar_Item_manage_String_title"/>

</menu>