<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/activity_view_all_groups_Menu_actionbar_Item_add_group"
        android:showAsAction="always"
        android:title="@string/activity_view_all_groups_Menu_actionbar_Item_add_String_title"
        android:icon="@android:drawable/ic_menu_add" />
    
    <item
        android:id="@+id/activity_view_all_groups_Menu_actionbar_Item_manage_group"
        android:showAsAction="always"
        android:title="@string/activity_view_all_groups_Menu_actionbar_Item_manage_String_title"
        android:icon="@android:drawable/ic_menu_edit" />
</menu>